--- a/css/main.css
+++ b/css/main.css
@@ -36,3 +36,23 @@ h1 {
   left: 60%;
   top: 30vh;
 }
+
+.modal-header div {
+  width: 100%;
+  text-align: center;
+}
+
+.modal-body {
+  width: 100%;
+  height: 50vh;
+  padding: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.modal-body img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
