--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
     border: none;
     outline: none;
     color: #fff;
-    min-width: 8rem;
+    min-width: 5rem;
     text-align: center;
     padding: 1rem 2rem;
     border-radius: 5rem;
@@ -312,6 +312,22 @@ body {
     .card__content-img {
         width: 12rem;
     }
+
+    .card__btn {
+        width: 12rem;
+    }
+
+    .heart {
+        width: 125px;
+    }
+
+    .heart__wrap {
+        width: 600px;
+    }
+
+    .heart-flying {
+        width: 200px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -330,6 +346,26 @@ body {
     .card__content-img {
         width: 13rem;
     }
+
+    .heart {
+        width: 100px;
+    }
+
+    .heart__wrap {
+        width: 500px;
+    }
+
+    .heart-flying {
+        width: 250px;
+    }
+
+    .heart-flying:last-child {
+        display: none;
+    }
+
+    .card__btn {
+        width: 10rem;
+    }
 }
 
 @media only screen and (max-width: 568px) {
@@ -342,10 +378,43 @@ body {
     .card {
         width: 28rem;
     }
+
+    .card__btn {
+        width: 9rem;
+    }
+
+    .heart__wrap {
+        width: 400px;
+    }
+
+    .heart-flying {
+        width: 200px;
+    }
 }
 
 @media only screen and (max-width: 460px) {
     .card {
-        width: 19rem;
+        width: 18rem;
+    }
+
+    .card__btn {
+        width: 5rem;
+    }
+
+    .heart {
+        width: 80px;
+        left: 10px;
+    }
+
+    .heart__wrap {
+        width: 280px;
+    }
+
+    .heart-flying {
+        width: 280px;
+    }
+
+    .heart-flying:nth-child(2) {
+        display: none;
     }
 }
