--- a/assets/css/gift.css
+++ b/assets/css/gift.css
@@ -58,6 +58,10 @@ body {
     display: none;
 }
 
+.disable {
+    pointer-events: none;
+}
+
 .confetti {
     position: fixed;
     top: 4rem;
@@ -65,6 +69,8 @@ body {
     width: 200px;
     pointer-events: none;
 }
+
+
 
 .row {
     display: flex;
