--- a/assets/css/gift.css
+++ b/assets/css/gift.css
@@ -110,8 +110,8 @@ body {
 
 .modal__close {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 0.6rem;
+    right: 0.6rem;
     padding: 0.5rem;
     cursor: pointer;
 }
@@ -128,6 +128,12 @@ body {
 .card__text {
     flex: 1;
     font-size: var(--font-normal);
+}
+
+.card__img-container {
+    flex: 1;
+    text-align: center;
+    padding: 1rem 0;
 }
 
 .card__img {
