--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 /* Base */
 :root {
@@ -11,7 +11,7 @@
     --first-color: #1a73e8;
     --input-color: #80868b;
     --border-color: #dadce0;
-    --body-font: 'Roboto', sans-serif;
+    --body-font: 'Pacifico', cursive;
     --normal-font-size: 1rem;
     --small-font-size: 0.75rem;
 }
@@ -25,6 +25,10 @@
 body {
     font-size: 62.5%;
     font-family: var(--body-font);
+    background: padding-box no-repeat url('../img/bg1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .main {
@@ -251,6 +255,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    font-family: var(--body-font);
     font-size: var(--normal-font-size);
     border: 1px solid var(--border-color);
     border-radius: 0.5rem;
@@ -400,6 +405,10 @@ body {
         --font-bigger: 2rem;
         --font-big: 1.7rem;
         --font-normal: 1.2rem;
+    }
+
+    .btn {
+        padding: 0.5rem 0.7rem;
     }
 
     .card {
