--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,6 +436,10 @@ body {
         --font-small: 1.1rem;
     }
 
+    .main {
+        height: 90vh;
+    }
+
     .card {
         width: 18rem;
     }
