--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     --font-big: 2.5rem;
     --font-normal: 2rem;
     --font-small: 1.5rem;
+    --font-smaller: 1rem;
 
     --first-color: #1a73e8;
     --input-color: #80868b;
@@ -82,6 +83,23 @@ body {
     background-color: #71be34;
 }
 
+.btn--succes-outline {
+    background-color: transparent;
+    border: 1px solid #71be34;
+    color: #71be34;
+}
+
+.btn--succes-outline:hover {
+    background-color: #71be34;
+    color: #fff;
+    opacity: 1;
+}
+
+.btn.btn--s {
+    padding: 0.5rem 0.8rem;
+    font-size: var(--font-smaller);
+}
+
 .btn--primary {
     background-color: var(--first-color);
 }
@@ -99,6 +117,7 @@ body {
     opacity: 0.8;
 }
 
+.hello__modal,
 .modal {
     position: fixed;
     top: 0;
@@ -112,6 +131,40 @@ body {
     opacity: 0;
     visibility: hidden;
     transition: all 0.2s ease-in-out;
+    z-index: 9;
+}
+
+.hello__modal {
+    background-color: #fff;
+    transform: scale(0);
+    z-index: 19;
+    background: padding-box no-repeat url('../img/bg2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.hello {
+    max-width: 80%;
+    width: 35rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hello__animation {
+    max-width: 100%;
+    width: 32rem;
+    transform: translateX(10%);
+}
+
+.hello__text {
+    margin-top: 2rem;
+    font-size: var(--font-big);
+}
+
+.hello__modal.active {
+    transform: scale(1);
 }
 
 .active {
@@ -121,8 +174,8 @@ body {
 
 .modal__body {
     position: relative;
-    z-index: 1;
-    transform: scale(0.5);
+    z-index: 19;
+    transform: scale(0);
     transition: transform 0.2s ease-in-out;
 }
 
@@ -326,6 +379,58 @@ body {
     border: 2px solid var(--first-color);
 }
 
+/* Spinner */
+#spiner {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.spinner__animation {
+    max-width: 20%;
+    width: 5rem;
+}
+
+/* Notify Login */
+.login__notify {
+    z-index: 29;
+}
+
+.notify__body {
+    padding: 1.5rem 3rem;
+    background-color: #fff;
+    border-radius: 0.5rem;
+    max-width: 85%;
+    transform: scale(0);
+    transition: all 0.3s ease-in-out;
+}
+
+.active .notify__body {
+    transform: scale(1);
+}
+
+.notify__text {
+    width: 90%;
+    margin: 0 auto;
+    font-size: var(--font-small);
+    text-align: center;
+    color: red;
+}
+
+.notify__animation {
+    margin: 1rem auto;
+    max-width: 50%;
+    width: 20rem;
+}
+
+.notify__btn-wrap {
+    border-top: 1px solid #ccc;
+    text-align: right;
+    padding: 1rem;
+}
+
+.notify__btn + .notify__btn {
+    margin-left: 1rem;
+}
+
 /* Media queries */
 @media only screen and (max-width: 999px) {
     :root {
@@ -434,6 +539,7 @@ body {
         --font-big: 1.3rem;
         --normal-font-size: 0.935rem;
         --font-small: 1.1rem;
+        --font-smaller: 0.75rem;
     }
 
     .main {
@@ -467,6 +573,15 @@ body {
 
     .form {
         width: 340px;
+    }
+
+    .notify__body {
+        padding: 1rem 1.5rem;
+    }
+
+    .btn.btn--s {
+        padding: 0.3rem 0.5rem;
+        min-width: 3rem;
     }
 }
 
