fix some bug and add favicon

--- a/assets/css/gift.css
+++ b/assets/css/gift.css
@@ -8,7 +8,7 @@
     --font-normal: 2rem;
     --font-small: 1.5rem;
 
-    --primary-color: #a42fd3;
+    --primary-color: #a64969;
     --body-font: 'Pacifico', cursive;
 }
 
