--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
     --font-small: 1.5rem;
     --font-smaller: 1rem;
 
-    --primary-color: #a42fd3;
+    --primary-color: #a64969;
     --input-color: #80868b;
     --border-color: #dadce0;
     --body-font: 'Pacifico', cursive;
