--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,8 +193,9 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    padding: 0.5rem;
+    padding: 0 0.7rem;
     cursor: pointer;
+    color: var(--primary-color);
 }
 
 .card {
